--- a/src/Components/style/NavBar.css
+++ b/src/Components/style/NavBar.css
@@ -7,7 +7,6 @@
 .NavBar h2 {
     float: right;
     margin: 0;
-    line-height: 50px;
     padding-right: 20px;
 }
 .NavBar h2::after {
@@ -18,7 +17,7 @@
     margin: 0;
     padding-left: 10px;
     padding-right: 10px;
-    line-height: 50px;
+    /* line-height: 50px; */
     min-width: 30px;
 }
 .NavBar p::after {
@@ -36,6 +35,7 @@
 }
 .NavBar img {
     float: left;
+    height: 70%;
     padding-left: 10px;
     padding-right: 10px;
 }
