Finished move to CSS library

--- a/src/Components/style/CardView.css
+++ b/src/Components/style/CardView.css
@@ -1,5 +1,5 @@
 .CardView {
-    text-align: center;
+    /* text-align: center; */
     max-width: 500px;
     max-height: 500px;
     height: 47%;
