--- a/src/Pages/style/Schedule.css
+++ b/src/Pages/style/Schedule.css
@@ -4,5 +4,15 @@
 }
 .ScrollView-Section td {
     text-align: center;
-    width: 50%;
+}
+.ScrollView-Section th {
+    text-align: center;
+    font-size: 14pt;
+    color: white;
+}
+.Schedule-row:nth-child(odd) {
+    background-color: lightgray;
+}
+.Schedule-row:nth-child(even) {
+    background-color: white;
 }
