--- a/src/Components/style/NavBar.css
+++ b/src/Components/style/NavBar.css
@@ -5,6 +5,8 @@
     height: 60px;
     background-color: lightgray;
     z-index: 10;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 .NavBar h2 {
     float: right;
@@ -31,6 +33,7 @@
 
 .NavBar a {
     color: white;
+    display: inline-block;
 }
 .NavBar a:hover {
     cursor: pointer;
